--- a/force-app/main/default/lwc/.eslintrc.json
+++ b/force-app/main/default/lwc/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["@salesforce/eslint-config-lwc/recommended"],
+  "extends": ["@salesforce/eslint-config-lwc/recommended","@salesforce/eslint-config-lwc/i18n"],
   "overrides": [
     {
       "files": ["*.test.js"],
@@ -10,5 +10,22 @@
         "node": true
       }
     }
-  ]
+  ],
+  "parser": "@babel/eslint-parser",
+    "parserOptions": {
+        "requireConfigFile": false,
+        "babelOptions": {
+            "parserOpts": {
+                "plugins": ["classProperties", ["decorators", { "decoratorsBeforeExport": false }]]
+            }
+        }
+    },
+
+    "plugins": ["@lwc/eslint-plugin-lwc"],
+
+    "rules": {
+        "@lwc/lwc/no-deprecated": "error",
+        "@lwc/lwc/valid-api": "error",
+        "@lwc/lwc/no-document-query": "error"
+    }
 }
